--- a/server/pom.xml
+++ b/server/pom.xml
@@ -12,7 +12,30 @@
 
 	</properties>
 	<dependencies>
-
+		<dependency>
+			<groupId>top.coos</groupId>
+			<artifactId>nat.core</artifactId>
+			<version>${project.version}</version>
+		</dependency>
 	</dependencies>
-	<build />
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.codehaus.mojo</groupId>
+				<artifactId>exec-maven-plugin</artifactId>
+				<version>1.1.1</version>
+				<executions>
+					<execution>
+						<phase>test</phase>
+						<goals>
+							<goal>java</goal>
+						</goals>
+						<configuration>
+							<mainClass>top.coos.nat.Application</mainClass>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin>
+		</plugins>
+	</build>
 </project>
